--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         </section>
         
     </main>
-    <script src="script.js"></script>
+    <script src="/assets/scripts/script.js"></script>
 </body>
 </html>
