Add buttons inside of start container index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
                 True triumph lies in mastering three maps in a row. Outsmart, outmaneuver, and outplay your opponent to emerge as the supreme strategist. 
                 Ready your wits, and let the conquest begin!</p>-->
             <button>start</button>
+            <div>
+                <button class="prev-btn btn icon" aria-label="Previous">
+                    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                        <span class="visually-hidden">Previous</span>
+                    <button class="next-btn btn icon" aria-label="Next">
+                        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                  </button>
+
+            </div>
+            <button class="btn-green">play</button>
         </section>
         
     </main>
