Add script to button for how to play text click events script.js index.html

--- a/index.html
+++ b/index.html
@@ -13,17 +13,7 @@
         <h1>TIC TAC TACTICS</h1>
         <section class="start-container">
             <h2>How to play!</h2>
-            <p>
-                Gather a companion and embark on a strategic duel where the vibrant streets of Brazil clash with the cunning shadows of Morocco.
-                Player one assumes the role of Raze, Brazil's explosive agent, launching an onslaught with her notorious Paint Shells. 
-                Player two channels Cypher, the Moroccan sentinel, fortifying defenses with his tactical Spycam.</p>
-                <!--
-                Initiate the challenge by selecting one of the diverse maps as your battleground.<br> 
-                Your mission: to dominate and claim the map as your territory. 
-                But be warned the ultimate victory isn't just about winning a single map. 
-                True triumph lies in mastering three maps in a row. Outsmart, outmaneuver, and outplay your opponent to emerge as the supreme strategist. 
-                Ready your wits, and let the conquest begin!</p>-->
-            <button>start</button>
+            <p id="info"></p>
             <div>
                 <button class="prev-btn btn icon" aria-label="Previous">
                     <i class="fa fa-arrow-left" aria-hidden="true"></i>
