--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </section>
         
     </main>
-    <script src="/assets/scripts/script.js"></script>
+    <script src="assets/scripts/script.js"></script>
 </body>
 </html>
