Update buttons fix bug button were moving to the center when one of them was hidden fix inline-block to auto

--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
 <body>
     <main class="game-container">
         <h1>TIC TAC TACTICS</h1>
-        <section class="start-container">
-            <h2>How to play!</h2>
-            <p id="info"></p>
-            <div>
-                <button class="prev-btn btn icon" aria-label="Previous">
-                    <i class="fa fa-arrow-left" aria-hidden="true"></i>
-                        <span class="visually-hidden">Previous</span>
-                    <button class="next-btn btn icon" aria-label="Next">
-                        <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                        <span class="visually-hidden">Next</span>
-                      </button>
-                  </button>
-
+    <section class="start-container">
+        <h2>How to play!</h2>
+        <p id="info"></p>
+        <div>
+            <button class="prev-btn btn icon" aria-label="Previous">
+                <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="next-btn btn icon" aria-label="Next">
+                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                <span class="visually-hidden">Next</span>
+            </button>
             </div>
-            <button class="btn-green">play</button>
-        </section>
-        
+            <button class="btn-green play-btn">play</button>
+    </section>
     </main>
     <script src="assets/scripts/script.js"></script>
 </body>
