Add maps and reset button index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
             </div>
             <button class="btn-green play-btn">play</button>
     </section>
+<section class="maps-container hidden">
+    <div class="scoreboard">
+      <h2><span class="score raze-score">0</span>-<span class="score cypher-score">0</span></h2>
+    </div>
+    <div class="maps">
+        <div class="map bind" id="map1"></div>
+        <div class="map haven" id="map2"></div>
+        <div class="map split" id="map3"></div>
+        <div class="map ascent" id="map4"></div>
+        <div class="map icebox" id="map5"></div>
+        <div class="map breeze" id="map6"></div>
+        <div class="map frature" id="map7"></div>
+        <div class="map pearl" id="map8"></div>
+        <div class="map sunset" id="map9"></div>
+    </div>
+    <div>
+    <a class="btn reset-btn" href="index.html">Reset</a>
+    </div>
+  </section>  
     </main>
     <script src="assets/scripts/script.js"></script>
 </body>
