--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 <p id="info"></p>
             </div>
             <div class="sound">
-                <button class=" btn btn-mute">
+                <button class=" btn btn-mute" id="unmute">
+                    <audio id="mySound" src="assets/sound/welcome.mp3" controls="false" class="visually-hidden"></audio>
                     <i class="fa-solid fa-volume-off"></i>
                 </button>
             </div>
@@ -27,7 +28,7 @@
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
                 <span class="visually-hidden">Previous</span>
             </button></div>
-            <div class="button"><a class="btn-green play-btn" href="start.html">play</a></div>
+            <div class="button"><a class="btn-green play-btn" href="play.html">play</a></div>
             <div class="button"><button class="btn-green next-btn btn" aria-label="Next">
                 <i class="fa fa-arrow-right" aria-hidden="true"></i>
                 <span class="visually-hidden">Next</span>
