Update button 1 row up and style index.html styles.css

--- a/index.html
+++ b/index.html
@@ -19,20 +19,26 @@
                 <p id="info"></p>
             </div>
             <div class="sound">
+                <button class="btn-green prev-btn btn" aria-label="Previous">
+                    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+            </div>
+            <div class="sound">
                 <button class=" btn btn-mute" id="unmute">
                     <audio id="mySound" src="assets/sound/welcome.mp3" controls="false" class="visually-hidden"></audio>
                     <i class="fa-solid fa-volume-off"></i>
                 </button>
             </div>
-            <div class="button"><button class="btn-green prev-btn btn" aria-label="Previous">
-                <i class="fa fa-arrow-left" aria-hidden="true"></i>
-                <span class="visually-hidden">Previous</span>
-            </button></div>
-            <div class="button"><a class="btn-green play-btn" href="play.html">play</a></div>
-            <div class="button"><button class="btn-green next-btn btn" aria-label="Next">
-                <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                <span class="visually-hidden">Next</span>
-            </button></div>
+            <div class="sound">
+                <button class="btn-green next-btn btn" aria-label="Next">
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div class="button">
+                <a class="btn-green play-btn" href="play.html">play</a>
+            </div>
         </div>
     </main>
     <script
