Update classes and add aria-label to unmute button index.html

--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
     <h1>Tic tac tactics</h1>
     <main>
         <div class="welcome-container">
-            <div class="htp">
+            <div class="how-to-play">
                 <h2>How to play!</h2>
             </div>
             <div class="info">
                 <p id="info"></p>
             </div>
-            <div class="sound">
-                <button class="btn-green prev-btn btn" aria-label="Previous">
+            <div class="button">
+                <button class="btn btn-green prev-btn" aria-label="Previous">
                     <i class="fa fa-arrow-left" aria-hidden="true"></i>
                     <span class="visually-hidden">Previous</span>
                 </button>
             </div>
-            <div class="sound">
-                <button class=" btn btn-mute" id="unmute">
+            <div class="button">
+                <button class="btn btn-mute" id="unmute" aria-label="Unmute">
                     <audio id="mySound" src="assets/sound/welcome.mp3" controls="false" class="visually-hidden"></audio>
                     <i class="fa-solid fa-volume-off"></i>
                 </button>
             </div>
-            <div class="sound">
-                <button class="btn-green next-btn btn" aria-label="Next">
+            <div class="button">
+                <button class="btn btn-green next-btn" aria-label="Next">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            <div class="button">
-                <a class="btn-green play-btn" href="play.html">play</a>
+            <div class="play">
+                <a class="btn btn-green" href="play.html">play</a>
             </div>
         </div>
     </main>
