--- a/play.html
+++ b/play.html
@@ -1,50 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/play.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Dive into Tic Tac Tactics, an electrifying twist on classic tic-tac-toe! Choose your arena, select Raze or Cypher, and unleash your strategic prowess across the vibrant maps of Valorant. Are you ready to outsmart, outmaneuver, and claim victory? Play now and conquer the board!">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/play.css" />
     <title>Tic Tac Tactics</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Tic tac tactics</h1>
     <main>
-        <div class="grid">
-            <div class="turn">
-                <h2>0</h2>
-            </div>
-            <div class="turn">
-                <h2>-</h2>
-            </div>
-            <div class="turn">
-                <h2>0</h2>
-            </div>
-            <div class="square map1">
-
-            </div>
-            <div class="square map2">
-                
-            </div>
-            <div class="square map3"></div>
-            <div class="square map4"></div>
-            <div class="square map5"></div>
-            <div class="square map6"></div>
-            <div class="square map7"></div>
-            <div class="square map8"></div>
-            <div class="square map9"></div>
-            <div class="button">
-                <button class="btn">INFO</button>
-            </div>
-            <div class="button">
-                <button class="btn">RESET</button>
-            </div>
-            <div class="button">
-                <a class="btn btn-red" href="index.html">BACK</a>
-            </div>
+      <div class="grid">
+        <div class="score">
+          <h2>0</h2>
         </div>
+        <div class="score">
+          <h2>-</h2>
+        </div>
+        <div class="score">
+          <h2>0</h2>
+        </div>
+        <div class="maps map1"></div>
+        <div class="maps map2"></div>
+        <div class="maps map3"></div>
+        <div class="maps map4"></div>
+        <div class="maps map5"></div>
+        <div class="maps map6"></div>
+        <div class="maps map7"></div>
+        <div class="maps map8"></div>
+        <div class="maps map9"></div>
+        <div class="button">
+          <button class="btn">INFO</button>
+        </div>
+        <div class="button">
+          <button class="btn">Reset</button>
+        </div>
+        <div class="button">
+          <a class="btn btn-red" href="index.html">BACK</a>
+        </div>
+      </div>
     </main>
     <script src="assets/scripts/app.js"></script>
-</body>
+  </body>
 </html>
