Update all button from classes to id for script index.html

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
                 <p id="info"></p>
             </div>
             <div class="button">
-                <button class="btn btn-green prev-btn" aria-label="Previous">
+                <button class="btn btn-green" id="prev-btn" aria-label="Previous">
                     <i class="fa fa-arrow-left" aria-hidden="true"></i>
                     <span class="visually-hidden">Previous</span>
                 </button>
             </div>
             <div class="button">
-                <button class="btn btn-mute" id="unmute" aria-label="Unmute">
-                    <audio id="mySound" src="assets/sound/welcome.mp3" controls="false" class="visually-hidden"></audio>
+                <button class="btn btn-mute" id="unmute-btn" aria-label="Unmute">
+                    <audio id="mySound" src="assets/sound/welcome.mp3" class="visually-hidden"></audio>
                     <i class="fa-solid fa-volume-off"></i>
                 </button>
             </div>
             <div class="button">
-                <button class="btn btn-green next-btn" aria-label="Next">
+                <button class="btn btn-green" id="next-btn" aria-label="Next">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     <span class="visually-hidden">Next</span>
                 </button>
