--- a/play.html
+++ b/play.html
@@ -16,7 +16,7 @@
   <body>
     <h1>Tic tac tactics</h1>
     <main>
-      <div class="grid">
+      <section class="map-container">
         <div class="score">
           <h2>0</h2>
         </div>
