--- a/play.html
+++ b/play.html
@@ -44,7 +44,161 @@
         <div class="button">
           <a class="btn btn-red" href="index.html">BACK</a>
         </div>
-      </div>
+      </section>
+      <!-- Tic Tac Toe Board 1 -->
+      <section class="tic-tac-toe-board hidden" data-map="bind">
+        <div class="map-name">
+            <h2>Bind</h2>
+        </div>
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+        <div class="back">
+            <button class="btn btn-red">BACK</button>
+        </div>
+      </section>
+      <section class="tic-tac-toe-board map-haven hidden" data-map="haven">
+        <div class="map-name">
+            <h2>Haven</h2>
+        </div>
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+        <div class="back">
+            <button class="btn btn-red">BACK</button>
+        </div>
+      </section>
+      <section class="tic-tac-toe-board hidden" data-map="split">
+        <div class="map-name">
+            <h2>Split</h2>
+        </div>
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+        <div class="back">
+            <button class="btn btn-red">BACK</button>
+        </div>
+      </section>
+      <section class="tic-tac-toe-board hidden" data-map="ascent">
+        <div class="map-name">
+            <h2>Ascent</h2>
+        </div>
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+        <div class="back">
+            <button class="btn btn-red">BACK</button>
+        </div>
+      </section>
+      <section class="tic-tac-toe-board hidden" data-map="icebox">
+        <div class="map-name">
+            <h2>Icebox</h2>
+        </div>
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+        <div class="back">
+            <button class="btn btn-red">BACK</button>
+        </div>
+      </section>
+      <section class="tic-tac-toe-board hidden" data-map="breeze">
+        <div class="map-name">
+            <h2>Breeze</h2>
+        </div>
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+        <div class="back">
+            <button class="btn btn-red">BACK</button>
+        </div>
+      </section>
+      <section class="tic-tac-toe-board hidden" data-map="fracture">
+        <div class="map-name">
+            <h2>Frature</h2>
+        </div>
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+        <div class="back">
+            <button class="btn btn-red">BACK</button>
+        </div>
+      </section>
+      <section class="tic-tac-toe-board hidden" data-map="pearl">
+        <div class="map-name">
+            <h2>Pearl</h2>
+        </div>
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+        <div class="back">
+            <button class="btn btn-red">BACK</button>
+        </div>
+      </section>
+      <section class="tic-tac-toe-board hidden" data-map="sunset">
+        <div class="map-name">
+            <h2>Sunset</h2>
+        </div>
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
+        <div class="back">
+            <button class="btn btn-red">BACK</button>
+        </div>
+      </section>
     </main>
     <script src="assets/scripts/app.js"></script>
   </body>
