Update a tag class btn to back button play.html

--- a/play.html
+++ b/play.html
@@ -42,7 +42,7 @@
           <button class="btn">Reset</button>
         </div>
         <div class="button">
-          <a class="btn btn-red" href="index.html">BACK</a>
+          <a class="btn-red btn" href="index.html">BACK</a>
         </div>
       </section>
       <!-- Tic Tac Toe Board 1 -->
