--- a/play.html
+++ b/play.html
@@ -46,7 +46,7 @@
         </div>
       </section>
       <!-- Tic Tac Toe Board 1 -->
-      <section class="tic-tac-toe-board hidden" data-map="bind">
+      <section class="tic-tac-toe-board hidden" id="board1" data-map="bind">
         <div class="map-name">
             <h2>Bind</h2>
         </div>
@@ -63,7 +63,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
-      <section class="tic-tac-toe-board map-haven hidden" data-map="haven">
+      <section class="tic-tac-toe-board hidden" id="board2" data-map="haven">
         <div class="map-name">
             <h2>Haven</h2>
         </div>
@@ -80,7 +80,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
-      <section class="tic-tac-toe-board hidden" data-map="split">
+      <section class="tic-tac-toe-board hidden" id="board3" data-map="split">
         <div class="map-name">
             <h2>Split</h2>
         </div>
@@ -97,7 +97,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
-      <section class="tic-tac-toe-board hidden" data-map="ascent">
+      <section class="tic-tac-toe-board hidden" id="board4" data-map="ascent">
         <div class="map-name">
             <h2>Ascent</h2>
         </div>
@@ -114,7 +114,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
-      <section class="tic-tac-toe-board hidden" data-map="icebox">
+      <section class="tic-tac-toe-board hidden" id="board5" data-map="icebox">
         <div class="map-name">
             <h2>Icebox</h2>
         </div>
@@ -131,7 +131,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
-      <section class="tic-tac-toe-board hidden" data-map="breeze">
+      <section class="tic-tac-toe-board hidden" id="board6" data-map="breeze">
         <div class="map-name">
             <h2>Breeze</h2>
         </div>
@@ -148,7 +148,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
-      <section class="tic-tac-toe-board hidden" data-map="fracture">
+      <section class="tic-tac-toe-board hidden" id="board7" data-map="fracture">
         <div class="map-name">
             <h2>Frature</h2>
         </div>
@@ -165,7 +165,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
-      <section class="tic-tac-toe-board hidden" data-map="pearl">
+      <section class="tic-tac-toe-board hidden" id="board8" data-map="pearl">
         <div class="map-name">
             <h2>Pearl</h2>
         </div>
@@ -182,7 +182,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
-      <section class="tic-tac-toe-board hidden" data-map="sunset">
+      <section class="tic-tac-toe-board hidden" id="board9" data-map="sunset">
         <div class="map-name">
             <h2>Sunset</h2>
         </div>
