--- a/play.html
+++ b/play.html
@@ -26,15 +26,15 @@
         <div class="score">
           <h2>0</h2>
         </div>
-        <div class="map map1" data-map="0"></div>
-        <div class="map map2" data-map="1"></div>
-        <div class="map map3" data-map="2"></div>
-        <div class="map map4" data-map="3"></div>
-        <div class="map map5" data-map="4"></div>
-        <div class="map map6" data-map="5"></div>
-        <div class="map map7" data-map="6"></div>
-        <div class="map map8" data-map="7"></div>
-        <div class="map map9" data-map="8"></div>
+        <div class="map map1" id="map1" data-map="0"></div>
+        <div class="map map2" id="map2" data-map="1"></div>
+        <div class="map map3" id="map3" data-map="2"></div>
+        <div class="map map4" id="map4" data-map="3"></div>
+        <div class="map map5" id="map5" data-map="4"></div>
+        <div class="map map6" id="map6" data-map="5"></div>
+        <div class="map map7" id="map7" data-map="6"></div>
+        <div class="map map8" id="map8" data-map="7"></div>
+        <div class="map map9" id="map9" data-map="8"></div>
         <div class="button">
           <button class="btn">INFO</button>
         </div>
