--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="assets/images/favicon_io/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -30,9 +30,8 @@
                 </button>
             </div>
             <div class="button">
-                <button class="btn btn-mute" id="unmute-btn" aria-label="Unmute">
+                <button class="btn btn-mute fa-solid fa-volume-off" id="unmute-btn" aria-label="Unmute">
                     <audio id="mySound" src="assets/sound/welcome.mp3" class="visually-hidden"></audio>
-                    <i class="fa-solid fa-volume-off"></i>
                 </button>
             </div>
             <div class="button">
