--- a/play.html
+++ b/play.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/play.css">
@@ -26,15 +26,15 @@
         <div class="score">
           <h2>0</h2>
         </div>
-        <div class="map map1" id="map1" data-map="0"></div>
-        <div class="map map2" id="map2" data-map="1"></div>
-        <div class="map map3" id="map3" data-map="2"></div>
-        <div class="map map4" id="map4" data-map="3"></div>
-        <div class="map map5" id="map5" data-map="4"></div>
-        <div class="map map6" id="map6" data-map="5"></div>
-        <div class="map map7" id="map7" data-map="6"></div>
-        <div class="map map8" id="map8" data-map="7"></div>
-        <div class="map map9" id="map9" data-map="8"></div>
+        <div class="map map1" id="map1" data-map="0" data-bg="bind"></div>
+        <div class="map map2" id="map2" data-map="1" data-bg="haven"></div>
+        <div class="map map3" id="map3" data-map="2" data-bg="split"></div>
+        <div class="map map4" id="map4" data-map="3" data-bg="ascent"></div>
+        <div class="map map5" id="map5" data-map="4" data-bg="icebox"></div>
+        <div class="map map6" id="map6" data-map="5" data-bg="breeze"></div>
+        <div class="map map7" id="map7" data-map="6" data-bg="fracture"></div>
+        <div class="map map8" id="map8" data-map="7" data-bg="pearl"></div>
+        <div class="map map9" id="map9" data-map="8" data-bg="sunset"></div>
         <div class="button">
           <button class="btn">INFO</button>
         </div>
@@ -150,7 +150,7 @@
       </section>
       <section class="tic-tac-toe-board hidden" id="board7" data-map="fracture">
         <div class="map-name">
-            <h2>Frature</h2>
+            <h2>Fracture</h2>
         </div>
         <div class="cell" data-cell="0"></div>
         <div class="cell" data-cell="1"></div>
