--- a/index.html
+++ b/index.html
@@ -4,47 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dive into Tic Tac Tactics, an electrifying twist on classic tic-tac-toe! Choose your arena, select Raze or Cypher, and unleash your strategic prowess across the vibrant maps of Valorant. Are you ready to outsmart, outmaneuver, and claim victory? Play now and conquer the board!">
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicon_io/">
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Tic Tac Tactics</title>
 </head>
 <body>
+    <!-- Header -->
+    <header>
+        <h1>Tic tac tactics</h1>
+    </header>
     <h1>Tic tac tactics</h1>
     <main>
-        <div class="welcome-container">
-            <div class="how-to-play">
+        <!-- Welcome -->
+        <section class="welcome-container">
+            <article class="how-to-play">
                 <h2>How to play!</h2>
-            </div>
+            </article>
+            <!-- Info -->
             <div class="info">
                 <p id="info"></p>
             </div>
-            <div class="button">
+            <!-- Buttons -->
+            <article class="button">
                 <button class="btn btn-green" id="prev-btn" aria-label="Previous">
                     <i class="fa fa-arrow-left" aria-hidden="true"></i>
                     <span class="visually-hidden">Previous</span>
                 </button>
-            </div>
-            <div class="button">
+            </article>
+            <!-- Buttons -->
+            <article class="button">
                 <button class="btn btn-mute fa-solid fa-volume-off" id="unmute-btn" aria-label="Unmute">
                     <audio id="mySound" src="assets/sound/welcome.mp3" class="visually-hidden"></audio>
                 </button>
-            </div>
-            <div class="button">
+            </article>
+            <!-- Buttons -->
+            <article class="button">
                 <button class="btn btn-green" id="next-btn" aria-label="Next">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     <span class="visually-hidden">Next</span>
                 </button>
-            </div>
-            <div class="play">
+            </article>
+            <!-- Buttons -->
+            <article class="play">
                 <a class="btn btn-green" href="play.html">play</a>
-            </div>
-        </div>
+            </article>
+        </section>
     </main>
+    <!-- Scripts -->
     <script src="https://kit.fontawesome.com/74774a4a16.js" crossorigin="anonymous"></script>
     <script src="assets/scripts/script.js"></script>
 </body>
