--- a/play.html
+++ b/play.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Dive into Tic Tac Tactics, an electrifying twist on classic tic-tac-toe! Choose your arena, select Raze or Cypher, and unleash your strategic prowess across the vibrant maps of Valorant. Are you ready to outsmart, outmaneuver, and claim victory? Play now and conquer the board!">
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/play.css">
+    <!-- Title -->
     <title>Tic Tac Tactics</title>
   </head>
   <body>
+    <!-- Header -->
+    <header>
     <h1>Tic tac tactics</h1>
+    </header>
+    <!-- Main -->
     <main>
+      <!-- Map Selection -->
       <section class="map-container">
         <div class="score">
           <h2>0</h2>
@@ -35,6 +43,7 @@
         <div class="map map7" id="map7" data-map="6" data-bg="fracture"></div>
         <div class="map map8" id="map8" data-map="7" data-bg="pearl"></div>
         <div class="map map9" id="map9" data-map="8" data-bg="sunset"></div>
+      <!-- Character Selection -->
         <div class="button">
           <button class="btn">INFO</button>
         </div>
@@ -45,7 +54,7 @@
           <a class="btn-red btn" href="index.html">BACK</a>
         </div>
       </section>
-      <!-- Tic Tac Toe Board 1 -->
+      <!-- Mini board 1-->
       <section class="tic-tac-toe-board hidden" id="board1" data-map="bind">
         <div class="map-name">
             <h2>Bind</h2>
@@ -63,6 +72,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
+      <!-- Mini board 2-->
       <section class="tic-tac-toe-board hidden" id="board2" data-map="haven">
         <div class="map-name">
             <h2>Haven</h2>
@@ -80,6 +90,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
+      <!-- Mini board 3 -->
       <section class="tic-tac-toe-board hidden" id="board3" data-map="split">
         <div class="map-name">
             <h2>Split</h2>
@@ -97,6 +108,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
+      <!-- Mini board 4 -->
       <section class="tic-tac-toe-board hidden" id="board4" data-map="ascent">
         <div class="map-name">
             <h2>Ascent</h2>
@@ -114,6 +126,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
+      <!-- Mini board 5 -->
       <section class="tic-tac-toe-board hidden" id="board5" data-map="icebox">
         <div class="map-name">
             <h2>Icebox</h2>
@@ -131,6 +144,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
+      <!-- Mini board 6 -->
       <section class="tic-tac-toe-board hidden" id="board6" data-map="breeze">
         <div class="map-name">
             <h2>Breeze</h2>
@@ -148,6 +162,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
+      <!-- Mini board 7 -->
       <section class="tic-tac-toe-board hidden" id="board7" data-map="fracture">
         <div class="map-name">
             <h2>Fracture</h2>
@@ -165,6 +180,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
+      <!-- Mini board 8 -->
       <section class="tic-tac-toe-board hidden" id="board8" data-map="pearl">
         <div class="map-name">
             <h2>Pearl</h2>
@@ -182,6 +198,7 @@
             <button class="btn btn-red">BACK</button>
         </div>
       </section>
+      <!-- Mini board 9 -->
       <section class="tic-tac-toe-board hidden" id="board9" data-map="sunset">
         <div class="map-name">
             <h2>Sunset</h2>
@@ -200,6 +217,7 @@
         </div>
       </section>
     </main>
+    <!-- Scripts-->
     <script src="assets/scripts/app.js"></script>
   </body>
 </html>
