--- a/play.html
+++ b/play.html
@@ -23,8 +23,9 @@
     </header>
     <!-- Main -->
     <main>
-      <!-- Map Selection -->
+      <!-- Map Container -->
       <section class="map-container">
+        <!-- Scoreboard -->
         <div class="score">
           <h2>0</h2>
         </div>
@@ -43,7 +44,7 @@
         <div class="map map7" id="map7" data-map="6" data-bg="fracture"></div>
         <div class="map map8" id="map8" data-map="7" data-bg="pearl"></div>
         <div class="map map9" id="map9" data-map="8" data-bg="sunset"></div>
-      <!-- Character Selection -->
+      <!-- Buttons -->
         <div class="button">
           <button class="btn">INFO</button>
         </div>
