Add classes to h2 for update scoreboard play.html

--- a/play.html
+++ b/play.html
@@ -27,13 +27,13 @@
       <section class="map-container">
         <!-- Scoreboard -->
         <div class="score">
-          <h2>0</h2>
+          <h2 class="raze-win">0</h2>
         </div>
         <div class="score">
           <h2>-</h2>
         </div>
         <div class="score">
-          <h2>0</h2>
+          <h2 class="cypher-win">0</h2>
         </div>
         <div class="map map1" id="map1" data-map="0" data-bg="bind"></div>
         <div class="map map2" id="map2" data-map="1" data-bg="haven"></div>
