Update button to refresh the page play.html

--- a/play.html
+++ b/play.html
@@ -49,7 +49,7 @@
           <button class="btn">INFO</button>
         </div>
         <div class="button">
-          <button class="btn">Reset</button>
+          <a class="btn" href="play.html">Reset</a>
         </div>
         <div class="button">
           <a class="btn-red btn" href="index.html">BACK</a>
