Add title to end game play.html

--- a/play.html
+++ b/play.html
@@ -19,7 +19,8 @@
   <body>
     <!-- Header -->
     <header>
-    <h1>Tic tac tactics</h1>
+      <h1 class="overall-winner winner hidden"></h1>
+      <h1 class="title">Tic tac tactics</h1>
     </header>
     <!-- Main -->
     <main>
