Update classes to combind css files index.html

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
                 <p id="info"></p>
             </div>
             <!-- Buttons -->
-            <article class="button">
+            <article class="buttons">
                 <button class="btn btn-green" id="prev-btn" aria-label="Previous">
                     <i class="fa fa-arrow-left" aria-hidden="true"></i>
                     <span class="visually-hidden">Previous</span>
                 </button>
             </article>
             <!-- Buttons -->
-            <article class="button">
+            <article class="buttons">
                 <button class="btn btn-mute fa-solid fa-volume-off" id="unmute-btn" aria-label="Unmute">
                     <audio id="mySound" src="assets/sound/welcome.mp3" class="visually-hidden"></audio>
                 </button>
             </article>
             <!-- Buttons -->
-            <article class="button">
+            <article class="buttons">
                 <button class="btn btn-green" id="next-btn" aria-label="Next">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     <span class="visually-hidden">Next</span>
@@ -52,7 +52,7 @@
             </article>
             <!-- Buttons -->
             <article class="play">
-                <a class="btn btn-green" href="play.html">play</a>
+                <a class="btn btn-play" href="play.html">play</a>
             </article>
         </section>
     </main>
