--- a/play.html
+++ b/play.html
@@ -17,6 +17,10 @@
     <title>Tic Tac Tactics</title>
   </head>
   <body>
+    <!-- preloader -->
+    <div class="preloader">
+      <img src="assets/images/preloader.gif" alt="preloader" />
+    </div>
     <!-- Header -->
     <header>
       <h1 class="overall-winner winner hidden"></h1>
