--- a/play.html
+++ b/play.html
@@ -12,7 +12,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/play.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- Title -->
     <title>Tic Tac Tactics</title>
   </head>
