--- a/play.html
+++ b/play.html
@@ -51,15 +51,15 @@
         <div class="map map9" id="map9" data-map="8" data-bg="sunset"></div>
       <!-- Buttons -->
         <div class="button">
-          <button class="btn btn-mute fa-solid fa-volume-off" id="unmute-btn" aria-label="Unmute">
+          <button class="btn-2 btn-mute fa-solid fa-volume-off" id="unmute-btn" aria-label="Unmute">
             <audio id="mySound" src="assets/sound/welcome.mp3" class="visually-hidden"></audio>
         </button>
         </div>
         <div class="button">
-          <a class="btn" href="play.html">Reset</a>
+          <a class="btn-2 btn-rest" href="play.html">Reset</a>
         </div>
         <div class="button">
-          <a class="btn-red btn" href="index.html">BACK</a>
+          <a class="btn-2 btn-red" href="index.html">BACK</a>
         </div>
       </section>
       <!-- Mini board 1-->
@@ -77,7 +77,7 @@
         <div class="cell" data-cell="7"></div>
         <div class="cell" data-cell="8"></div>
         <div class="back">
-            <button class="btn btn-red">BACK</button>
+            <button class="btn-2 btn-red">BACK</button>
         </div>
       </section>
       <!-- Mini board 2-->
@@ -95,7 +95,7 @@
         <div class="cell" data-cell="7"></div>
         <div class="cell" data-cell="8"></div>
         <div class="back">
-            <button class="btn btn-red">BACK</button>
+            <button class="btn-2 btn-red">BACK</button>
         </div>
       </section>
       <!-- Mini board 3 -->
@@ -113,7 +113,7 @@
         <div class="cell" data-cell="7"></div>
         <div class="cell" data-cell="8"></div>
         <div class="back">
-            <button class="btn btn-red">BACK</button>
+            <button class="btn-2 btn-red">BACK</button>
         </div>
       </section>
       <!-- Mini board 4 -->
@@ -131,7 +131,7 @@
         <div class="cell" data-cell="7"></div>
         <div class="cell" data-cell="8"></div>
         <div class="back">
-            <button class="btn btn-red">BACK</button>
+            <button class="btn-2 btn-red">BACK</button>
         </div>
       </section>
       <!-- Mini board 5 -->
@@ -149,7 +149,7 @@
         <div class="cell" data-cell="7"></div>
         <div class="cell" data-cell="8"></div>
         <div class="back">
-            <button class="btn btn-red">BACK</button>
+            <button class="btn-2 btn-red">BACK</button>
         </div>
       </section>
       <!-- Mini board 6 -->
@@ -167,7 +167,7 @@
         <div class="cell" data-cell="7"></div>
         <div class="cell" data-cell="8"></div>
         <div class="back">
-            <button class="btn btn-red">BACK</button>
+            <button class="btn-2 btn-red">BACK</button>
         </div>
       </section>
       <!-- Mini board 7 -->
@@ -185,7 +185,7 @@
         <div class="cell" data-cell="7"></div>
         <div class="cell" data-cell="8"></div>
         <div class="back">
-            <button class="btn btn-red">BACK</button>
+            <button class="btn-2 btn-red">BACK</button>
         </div>
       </section>
       <!-- Mini board 8 -->
@@ -203,7 +203,7 @@
         <div class="cell" data-cell="7"></div>
         <div class="cell" data-cell="8"></div>
         <div class="back">
-            <button class="btn btn-red">BACK</button>
+            <button class="btn-2 btn-red">BACK</button>
         </div>
       </section>
       <!-- Mini board 9 -->
@@ -221,7 +221,7 @@
         <div class="cell" data-cell="7"></div>
         <div class="cell" data-cell="8"></div>
         <div class="back">
-            <button class="btn btn-red">BACK</button>
+            <button class="btn-2 btn-red">BACK</button>
         </div>
       </section>
     </main>
