Update classes btn-rest to btn-reset play.html

--- a/play.html
+++ b/play.html
@@ -56,7 +56,7 @@
         </button>
         </div>
         <div class="button">
-          <a class="btn-2 btn-rest" href="play.html">Reset</a>
+          <a class="btn-2 btn-reset" href="play.html">Reset</a>
         </div>
         <div class="button">
           <a class="btn-2 btn-red" href="index.html">BACK</a>
