Update mute audio tag inside of button index.html

--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
             </article>
             <!-- Buttons -->
             <article class="buttons">
-                <button class="btn btn-mute fa-solid fa-volume-off" id="unmute-btn" aria-label="Unmute">
-                    <audio id="mySound" src="assets/sound/welcome.mp3" class="visually-hidden"></audio>
-                </button>
-            </article>
+                <button class="btn btn-mute fa-solid fa-volume-off" id="unmute-btn" aria-hidden="true" tabindex="-1" aria-label="Unmute"></button>
+                <audio id="mySound" src="assets/sound/welcome.mp3" class="visually-hidden" aria-hidden="true"></audio>
+              </article>              
             <!-- Buttons -->
             <article class="buttons">
                 <button class="btn btn-green" id="next-btn" aria-label="Next">
