Remove self-close tag from preloader play.html

--- a/play.html
+++ b/play.html
@@ -18,7 +18,7 @@
   <body>
     <!-- preloader -->
     <div class="preloader">
-      <img src="assets/images/preloader.gif" alt="preloader" />
+      <img src="assets/images/preloader.gif" alt="preloader">
     </div>
     <!-- Header -->
     <header>
