Remove self-close tag play.html

--- a/play.html
+++ b/play.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dive into Tic Tac Tactics, an electrifying twist on classic tic-tac-toe! Choose your arena, select Raze or Cypher, and unleash your strategic prowess across the vibrant maps of Valorant. Are you ready to outsmart, outmaneuver, and claim victory? Play now and conquer the board!">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
