Remove sections and articles to pass validator

--- a/index.html
+++ b/index.html
@@ -22,38 +22,38 @@
     </header>
     <main>
         <!-- Welcome -->
-        <section class="welcome-container">
-            <article class="how-to-play">
+        <div class="welcome-container">
+            <div class="how-to-play">
                 <h2>How to play!</h2>
-            </article>
+            </div>
             <!-- Info -->
             <div class="info">
                 <p id="info"></p>
             </div>
             <!-- Buttons -->
-            <article class="buttons">
+            <div class="buttons">
                 <button class="btn btn-green" id="prev-btn" aria-label="Previous">
                     <i class="fa fa-arrow-left" aria-hidden="true"></i>
                     <span class="visually-hidden">Previous</span>
                 </button>
-            </article>
+            </div>
             <!-- Buttons -->
-            <article class="buttons">
+            <div class="buttons">
                 <button class="btn btn-mute fa-solid fa-volume-off" id="unmute-btn" aria-hidden="true" tabindex="-1" aria-label="Unmute"></button>
                 <audio id="mySound" src="assets/sound/welcome.mp3" class="visually-hidden" aria-hidden="true"></audio>
-              </article>              
+            </div>              
             <!-- Buttons -->
-            <article class="buttons">
+            <div class="buttons">
                 <button class="btn btn-green" id="next-btn" aria-label="Next">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     <span class="visually-hidden">Next</span>
                 </button>
-            </article>
+            </div>
             <!-- Buttons -->
-            <article class="play">
+            <div class="play">
                 <a class="btn btn-play" href="play.html">play</a>
-            </article>
-        </section>
+            </div>
+        </div>
     </main>
     <!-- Scripts -->
     <script src="https://kit.fontawesome.com/74774a4a16.js" crossorigin="anonymous"></script>
