--- a/play.html
+++ b/play.html
@@ -22,7 +22,7 @@
     </div>
     <!-- Header -->
     <header>
-      <h1 class="overall-winner winner hidden"></h1>
+      <h1 class="overall-winner winner hidden">Winner Winner Chicken Dinner</h1>
       <h1 class="title">Tic tac tactics</h1>
     </header>
     <!-- Main -->
@@ -61,7 +61,7 @@
         </div>
       </section>
       <!-- Mini board 1-->
-      <section class="tic-tac-toe-board hidden" id="board1" data-map="bind">
+      <div class="tic-tac-toe-board hidden" id="board1" data-map="bind">
         <div class="map-name">
             <h2>Bind</h2>
         </div>
@@ -77,9 +77,9 @@
         <div class="back">
             <button class="btn-2 btn-red">BACK</button>
         </div>
-      </section>
+      </div>
       <!-- Mini board 2-->
-      <section class="tic-tac-toe-board hidden" id="board2" data-map="haven">
+      <div class="tic-tac-toe-board hidden" id="board2" data-map="haven">
         <div class="map-name">
             <h2>Haven</h2>
         </div>
@@ -95,9 +95,9 @@
         <div class="back">
             <button class="btn-2 btn-red">BACK</button>
         </div>
-      </section>
+      </div>
       <!-- Mini board 3 -->
-      <section class="tic-tac-toe-board hidden" id="board3" data-map="split">
+      <div class="tic-tac-toe-board hidden" id="board3" data-map="split">
         <div class="map-name">
             <h2>Split</h2>
         </div>
@@ -113,9 +113,9 @@
         <div class="back">
             <button class="btn-2 btn-red">BACK</button>
         </div>
-      </section>
+      </div>
       <!-- Mini board 4 -->
-      <section class="tic-tac-toe-board hidden" id="board4" data-map="ascent">
+      <div class="tic-tac-toe-board hidden" id="board4" data-map="ascent">
         <div class="map-name">
             <h2>Ascent</h2>
         </div>
@@ -131,9 +131,9 @@
         <div class="back">
             <button class="btn-2 btn-red">BACK</button>
         </div>
-      </section>
+      </div>
       <!-- Mini board 5 -->
-      <section class="tic-tac-toe-board hidden" id="board5" data-map="icebox">
+      <div class="tic-tac-toe-board hidden" id="board5" data-map="icebox">
         <div class="map-name">
             <h2>Icebox</h2>
         </div>
@@ -149,9 +149,9 @@
         <div class="back">
             <button class="btn-2 btn-red">BACK</button>
         </div>
-      </section>
+      </div>
       <!-- Mini board 6 -->
-      <section class="tic-tac-toe-board hidden" id="board6" data-map="breeze">
+      <div class="tic-tac-toe-board hidden" id="board6" data-map="breeze">
         <div class="map-name">
             <h2>Breeze</h2>
         </div>
@@ -167,9 +167,9 @@
         <div class="back">
             <button class="btn-2 btn-red">BACK</button>
         </div>
-      </section>
+      </div>
       <!-- Mini board 7 -->
-      <section class="tic-tac-toe-board hidden" id="board7" data-map="fracture">
+      <div class="tic-tac-toe-board hidden" id="board7" data-map="fracture">
         <div class="map-name">
             <h2>Fracture</h2>
         </div>
@@ -185,9 +185,9 @@
         <div class="back">
             <button class="btn-2 btn-red">BACK</button>
         </div>
-      </section>
+      </div>
       <!-- Mini board 8 -->
-      <section class="tic-tac-toe-board hidden" id="board8" data-map="pearl">
+      <div class="tic-tac-toe-board hidden" id="board8" data-map="pearl">
         <div class="map-name">
             <h2>Pearl</h2>
         </div>
@@ -203,9 +203,9 @@
         <div class="back">
             <button class="btn-2 btn-red">BACK</button>
         </div>
-      </section>
+      </div>
       <!-- Mini board 9 -->
-      <section class="tic-tac-toe-board hidden" id="board9" data-map="sunset">
+      <div class="tic-tac-toe-board hidden" id="board9" data-map="sunset">
         <div class="map-name">
             <h2>Sunset</h2>
         </div>
@@ -221,7 +221,7 @@
         <div class="back">
             <button class="btn-2 btn-red">BACK</button>
         </div>
-      </section>
+      </div>
     </main>
     <!-- Scripts-->
     <script src="https://kit.fontawesome.com/74774a4a16.js" crossorigin="anonymous"></script>
