Update path backslash play.html

--- a/play.html
+++ b/play.html
@@ -24,7 +24,7 @@
     <header>
       <h1 class="title overall-winner winner">Tic Tac Tactics</h1>
       <div class="player-turn hidden">
-        <img class="raze" id="player-icon" src="assets\images\ability-raze.webp" alt="Current Player">
+        <img class="raze" id="player-icon" src="assets/images/ability-raze.webp" alt="Current Player">
       </div>
     </header>
     <!-- Main -->
